--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clsx": "^2.1.1",
     "chess.js": "^1.4.0",
     "tailwind-merge": "^3.4.0",
-    "react-chessboard": "^5.8.6"
+    "chessground": "9.1.1",
+    "@supabase/supabase-js": "2.39.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
