--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+"scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2.39.3",
+    "chess.js": "^1.4.0",
+    "chessground": "9.1.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
     "react-router-dom": "^7.10.1",
-    "clsx": "^2.1.1",
-    "chess.js": "^1.4.0",
-    "tailwind-merge": "^3.4.0",
-    "chessground": "9.1.1",
-    "@supabase/supabase-js": "2.39.3"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
